# SWMM5plus

./: .gitignore  Allclean.sh  Allmake.sh  AllmakeTestModules.sh  BIPquick.f08  CAF_build.sh  CMakeLists.txt  LICENSE  README.md  Readme.md  SWMM  UR1_swmm_test.txt  WLR_WidthDepthList.txt  ac_convergence_loop.f08  adjustments.f08  adjustments.mod  allocate_storage.f08  allocate_storage.mod  animate_baseline_comparison.py  animate_rough.py  animate_water_level_comparison.py  array_index.f08  array_index.mod  artificial_compressibility.f08  batch_comparison.py  bc.f08  bc.mod  build.sh  build_alpha_release.sh  build_debug.sh  build_dependencies.sh  build_dependencies_alpha.sh  build_swmm5.sh  build_vars.sh  case_simple_channel.f08  case_simple_channel.mod  case_simple_orifice.f08  case_simple_pipe.f08  case_simple_weir.f08  case_simple_weir.mod  (+101 more)
OutputThreaded/: out_area_20200319_1824.txt  out_depth__20200319_1824.txt  out_eta_20200319_1824.txt  out_flowrate_20200319_1824.txt  out_velocity_20200319_1824.txt
SWWM_C/: .gitignore  Allmake.sh  swmm5_wrapper.py  tanks.out  tanks.rpt  test.py
Trinity_20220504/: Trinity_settings.json
Trinity_debug/: Trinity_DS_Test1.inp  Trinity_Test1.inp  Trinity_Test2.inp  Trinity_Test3.inp
arrays/: coarray_bipquick.f08  coarray_bipquick_distribute.f08  coarray_partition.f08  dynamic_array.f08  tables.f08
ctest/: CMakeLists.txt  CMakeLists.txt_TESTING_CMAKE_FEATURES  CMakeLists_geometry_tests.txt
debug_output/: README
definitions/: define_api_keys.f08  define_api_keys.f90  define_globals.f08  define_globals.f90  define_indexes.f08  define_indexes.f90  define_keys.f08  define_keys.f90  define_settings.f08  define_settings.f90  define_types.f08  define_types.f90  define_xsect_tables.f90  settings.json  settings_full_template.json  settings_small_template.json
deleteCodeFiles/: arch_conduit.f90  basket_handle_conduit.f90  catenary_conduit.f90  egg_shaped_conduit.f90  gothic_conduit.f90  horiz_ellipse_conduit.f90  horse_shoe_conduit.f90  semi_circular_conduit.f90  semi_elliptical_conduit.f90  vert_ellipse_conduit.f90
doc/: README-SWMMengine.md  main_page.md
docs/: README-SWMMengine.md
finalization/: finalization.f08  finalization.f90
geometry/: arch_conduit.f90  basket_handle_conduit.f90  catenary_conduit.f90  circular_conduit.f90  egg_shaped_conduit.f90  filled_circular_conduit.f90  forcemain.f90  geometry.f08  geometry.f90  geometry_lowlevel.f90  gothic_conduit.f90  horiz_ellipse_conduit.f90  horse_shoe_conduit.f90  irregular_channel.f90  mod_basket_conduit.f90  parabolic_channel.f90  powerfunction_channel.f90  preissmann_slot.f90  rectangular.f08  rectangular_channel.f90  rectangular_conduit.f90  rectangular_round_conduit.f90  rectangular_triangular_channel.f90  rectangular_triangular_conduit.f90  semi_circular_conduit.f90  semi_elliptical_conduit.f90  storage_geometry.f90  trapezoidal_channel.f90  triangular_channel.f90  vert_ellipse_conduit.f90  xsect_tables.f90
initialization/: BIPquick.f08  BIPquick.f90  BIPquick_LinkCuts.f90  allocate_storage.f08  discretization.f08  discretization.f90  dll.f08  inflow.f08  inflows_old.f08  initial_condition.f08  initial_condition.f90  initialization.f08  initialization.f90  interface.f08  network_define.f08  network_define.f90  pack_mask_arrays.f08  pack_mask_arrays.f90  partitioning.f08  partitioning.f90  setting_definition.f08  settings.json  settings_definition.f08  temp_CFL.f08
interface/: Makefile  Makefile_swmm5  Readme.md  add_to_controls.c  add_to_funcs.h  add_to_lid.c  add_to_lid.h  api.c  api.h  api_error.c  api_error.h  c_library.f08  c_library.f90  dll.f08  interface.f08  interface.f90
main/: finalization.f90  main.f08  main.f90  output.f90
output/: output.f90
parallel/: BIPquick.f08  partitioning.f08
simulation/: bc.f08
special_elements/: common_elements.f90  control_hydraulics.f90  culvert_elements.f90  diagnostic_elements.f90  jump.f90  orifice_elements.f90  outlet_elements.f90  pump_elements.f90  roadway_weir_elements.f90  weir_elements.f90
swmm_files/: OPTIMAL.inp  OPTIMAL_POC_RectChan.inp  OPTIMAL_POC_RectChan_Fixed_flow.inp  OPTIMAL_RectChan.inp  Y_BEN03_NetworkDefineTest.inp  Y_Junction_NetworkDefineTest.inp  Y_test_subcritical_all.inp  Y_test_supercritical_all.inp  Y_test_supercritical_upstream_high_subcritical_downstream.inp  bifurcation.inp  block.inp  block_tseries_only.inp  inflow_test_case.ini  inflow_test_case.inp  looped.inp  raindata.txt  simple_channel_12.inp  simple_channel_test_case.inp  simple_channel_variable_inflow.inp  single_channel.inp  single_rectangular_channel_variable_inflow.ini  single_rectangular_channel_variable_inflow.inp  six_link.inp  swashes.inp  y_system.inp
test_cases/: TTT_Baseline_v2.inp  ackers_1964.inp  all_geometry_test.inp  case_simple_channel.f08  case_simple_orifice.f08  case_simple_pipe  case_simple_weir.f08  case_swashes.f08  case_waller_creek.f08  case_y_channel.f08  case_y_storage_channel.f08  extran3_side_orifice.inp  extran4_trapezoidal.inp  extran6_pump_type1.inp  garcia_navarro1994.inp  gate_control_2.inp  parallel_test.inp  settings_TTT.json  settings_dx10.json  settings_dx5.json  simple_parallel_test.inp  simple_parallel_test_diag.inp  user1.inp  user2.inp  user5_a.inp
tests/: _interface_tests.f08  _tests.c  _tests.h  testing.txt
timeloop/: adjust.f08  adjust.f90  air_entrapment.f90  air_tracking.f90  boundary_conditions.f08  boundary_conditions.f90  common_elements.f90  control_hydraulics.f90  culvert_elements.f90  diagnostic.f08  diagnostic_elements.f08  diagnostic_elements.f90  face.f08  face.f90  hydrology.f90  jump.f08  jump.f90  junction_elements.f90  junction_lowlevel.f90  lowerlevel_junction.f90  lowerlevel_junctionOLD.f90  lowlevel_rk2.f08  lowlevel_rk2.f90  orifice_elements.f08  orifice_elements.f90  outlet_elements.f90  preissmann_slot.f90  pump_elements.f08  pump_elements.f90  reoadway_weir_elements.f90  rk2_lowlevel.f90  runge_kutta2.f08  runge_kutta2.f90  timeloop.f08  timeloop.f90  update.f08  update.f90  weir_elements.f08  weir_elements.f90
utilities/: BIPquick.f08  BIPquickFromScratch.f08  (+5 more)
(+1486 files in other folders)
